--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "axios": "^0.21.4",
     "bootstrap": "^4.6.2",
     "jwt-decode": "^3.1.2",
-    "react": "^17.0.2",
+    "react": "^19.1.0",
     "react-bootstrap": "^1.6.8",
-    "react-dom": "^17.0.2",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "heroku-prebuild": "npm install -g serve",
     "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
