--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     ]
   },
   "devDependencies": {
-    "msw": "^0.35.0"
+    "msw": "^0.35.0",
+    "jest-environment-jsdom": "^29.0.0"
   },
   "engines": {
     "node": "16.19.1",
